--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <p>Email: brianokoth974@gmail.com</p>
                 <p>Phone: +254 720 707 165</p>
                 <div class="socials">
-                    <a href="https://facebook.com">Facebook</a> | 
+                    <a href="https://facebook.com">Facaebok</a> | 
                     <a href="https://twitter.com">Twitter</a> | 
                     <a href="https://linkedin.com">LinkedIn</a>
                     <a class="whatsapp-button" href="https://wa.me/254720707165" target="_blank">Chat with us on WhatsApp</a>
