--- a/service.html
+++ b/service.html
@@ -177,13 +177,13 @@
         <p>&copy; 2024 CEO IT SOLUTIONS. All rights reserved.</p>
         <div class="contact-info">
             <p>Contact Us:</p>
-            <p>Email: info@ceoit.com</p>
-            <p>Phone: +123 456 7890</p>
-            <p>WhatsApp: +123 456 7890</p>
+            <p>Email: brianokoth974@gmail.com</p>
+            <p>Phone: 254 720 707 165</p>
+         
             <div class="socials">
-                <a href="https://facebook.com">Facebook</a> | 
-                <a href="https://twitter.com">Twitter</a> | 
-                <a href="https://linkedin.com">LinkedIn</a>
+                <a href="#">Facebook</a> | 
+                <a href="#">Twitter</a> | 
+                <a href="#">LinkedIn</a>
             </div>
         </div>
     </footer>
