--- a/service.html
+++ b/service.html
@@ -7,98 +7,133 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Additional Styles for Services Page */
-        .services-container {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-            margin: 20px;
-        }
-        .service-card {
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin: 15px;
-            padding: 20px;
-            text-align: center;
-            width: 250px; /* Set a fixed width for cards */
-        }
-        .service-card img {
-            width: 100%; /* Make images responsive */
-            border-radius: 8px;
-        }
-        .book-button {
-            display: inline-block;
-            margin-top: 10px;
-            background-color: #0078d4; /* Button color */
-            color: white;
-            padding: 10px 15px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: background-color 0.3s;
-            cursor: pointer;
-        }
-        .book-button:hover {
-            background-color: #005bb5; /* Darker shade on hover */
-        }
-        /* Modal styles */
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0,0,0,0.4);
-            padding-top: 60px;
-        }
-        .modal-content {
-            background-color: #fefefe;
-            margin: 5% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-            max-width: 500px;
-            border-radius: 8px;
-        }
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .form-group input {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        .confirm-button {
-            background-color: #28a745; /* Success color */
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .confirm-button:hover {
-            background-color: #218838; /* Darker shade on hover */
-        }
+       /* Additional Styles for Services Page */
+.services-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+
+.service-card {
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 15px;
+    padding: 20px;
+    text-align: center;
+    width: 250px; /* Set a fixed width for cards */
+}
+
+.service-card img {
+    width: 100%; /* Make images responsive */
+    border-radius: 8px;
+}
+
+.book-button {
+    display: inline-block;
+    margin-top: 10px;
+    background-color: #0078d4; /* Button color */
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    transition: background-color 0.3s;
+    cursor: pointer;
+}
+
+.book-button:hover {
+    background-color: #005bb5; /* Darker shade on hover */
+}
+
+/* Modal styles */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 60px;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 8px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.form-group input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.confirm-button {
+    background-color: #28a745; /* Success color */
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.confirm-button:hover {
+    background-color: #218838; /* Darker shade on hover */
+}
+
+/* Responsive Styles */
+@media (max-width: 600px) {
+    .services-container {
+        justify-content: center; /* Center cards on smaller screens */
+    }
+    .service-card {
+        width: 90%; /* Use most of the screen width */
+        margin: 10px 0; /* Adjust margin */
+    }
+    header {
+        padding: 10px; /* Reduce header padding */
+    }
+    h2 {
+        font-size: 1.5em; /* Adjust heading size */
+    }
+    .modal-content {
+        width: 95%; /* Adjust modal width */
+    }
+}
+
     </style>
 </head>
 <body>
