--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Slideshow CSS */
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+        
         .slideshow-container {
             position: relative;
             max-width: 100%;
             margin: auto;
             overflow: hidden; /* Hide overflow for better presentation */
         }
+
         .mySlides {
             display: none;
+            width: 100%; /* Ensure full width */
         }
+
         .text {
             color: #f2f2f2;
             font-size: 15px;
@@ -25,7 +34,8 @@
             left: 16px;
             background-color: rgba(0, 0, 0, 0.5);
         }
-        .prev, .next, .dot {
+
+        .prev, .next {
             cursor: pointer;
             position: absolute;
             top: 50%;
@@ -35,17 +45,22 @@
             font-size: 18px;
             border-radius: 3px;
             user-select: none;
+            transform: translateY(-50%); /* Center vertically */
         }
+
         .next {
             right: 0;
         }
+
         .prev:hover, .next:hover {
             background-color: rgba(0, 0, 0, 0.8);
         }
+
         .dots-container {
             text-align: center;
             margin-top: 10px;
         }
+
         .dot {
             height: 15px;
             width: 15px;
@@ -55,8 +70,33 @@
             display: inline-block;
             transition: background-color 0.6s ease;
         }
+
         .active {
             background-color: #717171;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #f2f2f2;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 600px) {
+            .text {
+                font-size: 12px; /* Smaller text for mobile */
+                padding: 6px 10px;
+            }
+
+            .prev, .next {
+                font-size: 16px; /* Smaller buttons for mobile */
+                padding: 10px;
+            }
+
+            .dot {
+                height: 12px;
+                width: 12px;
+            }
         }
     </style>
 </head>
@@ -103,22 +143,22 @@
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
         </section>
-      
-        <footer>
-            <p>&copy; 2024 CEO IT SOLUTIONS. All rights reserved.</p>
-            <div class="contact-info">
-                <p>Contact Us:</p>
-                <p>Email: brianokoth974@gmail.com</p>
-                <p>Phone: +254 720 707 165</p>
-                <div class="socials">
-                    <a href="https://facebook.com">Facaebok</a> | 
-                    <a href="https://twitter.com">Twitter</a> | 
-                    <a href="https://linkedin.com">LinkedIn</a>
-                    <a class="whatsapp-button" href="https://wa.me/254720707165" target="_blank">Chat with us on WhatsApp</a>
-                </div>
-            </div>
-        </footer>
     </main>
+
+    <footer>
+        <p>&copy; 2024 CEO IT SOLUTIONS. All rights reserved.</p>
+        <div class="contact-info">
+            <p>Contact Us:</p>
+            <p>Email: brianokoth974@gmail.com</p>
+            <p>Phone: +254 720 707 165</p>
+            <div class="socials">
+                <a href="https://facebook.com">Facebook</a> | 
+                <a href="https://twitter.com">Twitter</a> | 
+                <a href="https://linkedin.com">LinkedIn</a>
+                <a class="whatsapp-button" href="https://wa.me/254720707165" target="_blank">Chat with us on WhatsApp</a>
+            </div>
+        </div>
+    </footer>
 
     <script>
         let slideIndex = 0;
