--- a/about.html
+++ b/about.html
@@ -131,9 +131,9 @@
         <p>&copy; 2024 CEO IT SOLUTIONS. All rights reserved.</p>
         <div class="contact-info">
             <p>Contact Us:</p>
-            <p>Email: info@ceoit.com</p>
-            <p>Phone: +123 456 7890</p>
-            <p>WhatsApp: +123 456 7890</p>
+            <p>Email:brianokoth974@gmail.com</p>
+            <p>Phone:0720 707 165</p>
+     
             <div class="socials">
                 <a href="https://facebook.com">Facebook</a> | 
                 <a href="https://twitter.com">Twitter</a> | 
